# Stranded2pp

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE.md  README.md  TODO.md  build.sh  clean.sh  grind.sh  run.sh  test.sh
docs/: Script.md  ScriptParsing.md  b3d_doc.md  files.txt
source/: Makefile  Stranded.cpp  Stranded.h  main.cpp
source/common/: Arguments.h  ByteBuffer.cpp  ByteBuffer.h  Cfg.cpp  Cfg.h  CmdLineArgs.cpp  CmdLineArgs.h  FileSystem.cpp  FileSystem.h  Modification.cpp  Modification.h  ParseUtils.cpp  ParseUtils.h  Resources.cpp  Resources.h  RingBuffer.cpp  RingBuffer.h  StringIds.h  StringUtils.cpp  StringUtils.h  Strings.cpp  Strings.h  Timer.cpp  Timer.h
source/common/math/: Aabb.h  Frustum.cpp  Frustum.h  Line.h  MathUtility.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Rect.h  Vector2.h  Vector3.h
source/engine/: Engine.cpp  Engine.h  Object.h  ObjectBuilder.cpp  ObjectBuilder.h  Objects.h  Pool.h  SaveGameUtils.cpp  SaveGameUtils.h
source/engine/controller/: Controller.cpp  Controller.h  MainMenuController.cpp  MainMenuController.h
source/engine/controllers/: Controller.h
source/engine/script/: Compiler.cpp  Compiler.h  CompilerUtils.cpp  CompilerUtils.h  Executable.cpp  Executable.h  ExecutionContext.cpp  ExecutionContext.h  Program.cpp  Program.h  Token.cpp  Token.h
source/graphics/: BmpFont.cpp  BmpFont.h  Color.cpp  Color.h  EntityHandle.cpp  EntityHandle.h  FontType.h  Graphics.cpp  Graphics.h  HardwareMappingHint.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  IndexSize.h  Light.cpp  Light.h  LoadingScreen.cpp  LoadingScreen.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  Model.h  Object.cpp  Object.h  TextCentering.h  TextEngine.cpp  TextEngine.h  TextPadding.h  TextStyle.h  Texture.cpp  Texture.h  Vertex3D.cpp  Vertex3D.h  VertexBuffer.cpp  VertexBuffer.h
source/graphics/device/: Device.cpp  Device.h  OpenGLDevice.cpp  OpenGLDevice.h
source/graphics/gui/: Gui.h  (+13 more)
source/gui/: Gui.cpp  Gui.h
source/input/: Event.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  RawInputHandler.cpp  RawInputHandler.h
source/math/: Frustum.h  Line.cpp  Line.h  MathUtility.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Rect.h  Vector2.h
source/mod/: GameConfig.cpp  GameConfig.h  Lightcycle.cpp  Lightcycle.h  Materials.cpp  Materials.h  Object.cpp  Object.h  Objects.cpp  Objects.h  States.cpp  States.h
source/network/: Network.cpp  Network.h
source/script/: Script.cpp  Script.h
source/sound/: Sound.cpp  Sound.h
source/state/: Editor.cpp  Editor.h  Intro.cpp  Intro.h  MainMenu.cpp  MainMenu.h  State.cpp  State.h
source/utils/: ParseUtils.cpp  ParseUtils.h  StringUtils.cpp  StringUtils.h
source/window/: Window.cpp  Window.h
tools/: README.md  b3dpreview.cpp  dump_b3d.py
(+34 files in other folders)
